
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 char* strchr (char*,char) ;

__attribute__((used)) static char* findSeparator(char *p) {
 char *q = strchr (p, '+');
 if (q) {
  return q;
 }
 return strchr (p, '-');
}
